--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "json-server": "^0.14.2",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -54,6 +55,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "watch-db": "json-server --watch db.json  --port 4000",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
