--- a/package.json
+++ b/package.json
@@ -44,8 +44,13 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "reduxsauce": "^1.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "seamless-immutable": "^7.1.4",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
