--- a/package.json
+++ b/package.json
@@ -35,24 +35,30 @@
     "jest-resolve": "23.6.0",
     "json-server": "^0.14.2",
     "mini-css-extract-plugin": "0.4.3",
+    "node-sass-chokidar": "^1.3.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.2",
     "reduxsauce": "^1.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "seamless-immutable": "^7.1.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
@@ -62,6 +68,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "watch-css": "node-sass-chokidar src/assets/index.scss -o src/assets/ --watch --recursive",
     "watch-db": "json-server --watch db.json  --port 4000",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
